<resources>
    <string name="app_name">Fitness</string>
    <string name="run">Run</string>
    <string name="history">History</string>

    <string name="google_maps_api">AIzaSyDXvVgohcYlHnReXTGVJkvC5NL6Hp8dDfY</string>
    <string name="end">END</string>
    <string name="start">START</string>

    <string name="not_details">Started Running at: </string>
    <string name="unknown_location">Unknown location</string>

    <string name="ok">OK</string>
    <string name="permission_rationale">All the time location permission required for core functionality</string>
    <string name="permission_denied_explanation">All the time location permission denied; needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="run_time_date">Run Time and Date:</string>
    <string name="starting_point">Starting Point:</string>
    <string name="end_point">End Point:</string>
    <string name="time_spent">Time spent:</string>
    <string name="distance">Distance:</string>
    <string name="average_speed">Average Speed:</string>

    <string name="result_title">Run results:</string>
    <string name="delete_history">Clean History</string>


    <string name="alert_delete_message"> Are you sure to clean up all the history?</string>
    <string name="alert_delele_delete">Delete</string>
    <string name="alert_delete_cancel">Cancel</string>
    <string name="alert_delete_title">CAUTION!</string>

    <string name="alert_swipe_message">Are you sure to delete this run history?</string>

    <string name="notification_content"> App is using gps and running is on</string>

    <string name="laucnh_activity">Launch Activity</string>
    <string name="stop_running">Stop running, remove updates</string>
    <string name="running">Running</string>


</resources>
